name:                echo
version:             0.1.0.0

synopsis:            A simple echo WebSocket server
homepage:            http://alexrudyk.com
author:              Alex Rudyk
maintainer:          alr@me.com
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable echo
  main-is:             Main.hs
  ghc-options:         -Wall

  build-depends:       base       == 4.7.*
                     , text       == 1.2.*
                     , websockets == 0.9.*

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings