name:                echo
version:             0.1.0.0

synopsis:            A simple echo WebSocket server
homepage:            http://alexrudyk.com
author:              Alex Rudyk
maintainer:          alr@me.com
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable echo
  main-is:             Main.hs
  ghc-options:         -Wall

  build-depends:       base           == 4.7.*
                     , text           == 1.2.*
                     , http-types     == 0.8.*
                     , websockets     == 0.9.*
                     , wai            == 3.0.*
                     , wai-websockets == 3.0.*
                     , warp           == 3.0.*

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite tests
  main-is:             Tests.hs
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0

  build-depends:       base           == 4.7.*
                     , hspec          == 2.1.*

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  